[metadata]
# replace with your username:
name = example-pkg-rafinhacarneiro
version = 1.0.0
author = Rafael Carneiro de Moraes
author_email = rafinhacarneiro@outlook.com
description = A simple Robot Framework library to read PDFs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafinhacarneiro/pdfhandler
project_urls =
    Bug Tracker = https://github.com/rafinhacarneiro/pdfhandler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src